manifests/frontend/front-end-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: front-end
  namespace: sock-shop
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "sock-shop-static-ip"
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "gce"
  labels:
    name: front-end  
spec:
  tls:
  - hosts:
    - socks.lukeaddison.co.uk
    secretName: socks-tls
  rules:
  - host: socks.lukeaddison.co.uk
    http:
      paths:
      - backend:
          serviceName: front-end
          servicePort: 80
